--- a/app/views/css/app.css
+++ b/app/views/css/app.css
@@ -10,7 +10,7 @@
 
 @theme {
     --font-sans:
-        'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+        'Nunito Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
     --font-serif: 'Bricolage Grotesque', serif;
 
     --radius-lg: var(--radius);
@@ -156,6 +156,6 @@
     }
 
     body {
-        @apply bg-background text-foreground font-serif;
+        @apply bg-background text-foreground font-sans;
     }
 }
